# dify_chat_tester

./: .env.config.example  .env.new  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  IFLOW.md  Implement Streaming Callbacks.md  LICENSE-CN  README.md  config.env.example  dify_chat_tester.py  dify_chat_tester_template.xlsx  main.py  pyproject.toml  release_info.json  uv.toml  用户使用指南.md
dify_chat_tester/: README.md  __init__.py  _version.py  ai_providers.py  app_controller.py  batch_manager.py  chat_manager.py  config.env.example  config_loader.py  console_background.py  excel_utils.py  logging_utils.py  plugin_manager.py  provider_setup.py  question_generator.py  selectors.py  terminal_ui.py  windows_console.py
dify_chat_tester/cli/: __init__.py  app.py  selectors.py  terminal.py  windows_console.py
docs/: AI_PROMPT_CONFIG.md  AI生成测试提问点功能报告.md  PLUGIN_GUIDE.md  用户使用指南.md
external_plugins/: README.md
tests/: conftest.py  test_ai_providers.py  test_ai_providers_streaming.py  test_app_controller.py  test_batch_and_chat_manager.py  test_batch_concurrent.py  test_batch_manager.py  test_batch_manager_extended.py  test_chat_manager.py  test_cli_ui.py  test_config_loader.py  test_console_platform.py  test_excel_utils.py  test_exceptions.py  test_export_command.py  test_logging.py  test_logging_utils.py  test_main.py  test_plugin_manager.py  test_provider_setup.py  test_question_generator.py  test_question_generator_flow.py  test_question_generator_utils.py  test_question_service.py  test_selectors.py  test_terminal_ui.py  test_terminal_ui_extended.py
(+27 files in other folders)
