[project]
name = "dify-chat-tester"
version = "1.0.0"
description = "AI 聊天客户端测试工具（支持多AI供应商）"
authors = [
    {name = "Mison", email = "1360962086@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "openpyxl",
    "colorama",
    "rich",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dify_chat_tester"]
