[project]
name = "dify-chat-tester"
version = "1.4.0"
description = "AI 聊天客户端测试工具（支持多AI供应商）"
authors = [
    {name = "Mison", email = "1360962086@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "openpyxl",
    "colorama",
    "rich",
]

[project.scripts]
# 安装为包后，可直接使用 `dify-chat-tester` 命令启动程序
"dify-chat-tester" = "main:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "pyinstaller>=5.13.2",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dify_chat_tester"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["dify_chat_tester"]
